<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveOrderActivity"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPutih">

    <ImageView
        android:layout_width="@dimen/horizontal_size"
        android:layout_height="@dimen/vertical_size"
        android:src="@drawable/menu_gofood"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/vertical_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="@dimen/tv_size_big"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:paddingBottom="@dimen/vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/linear_width_weight"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="@dimen/tv_order_size"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_marginTop="@dimen/vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textSize="@dimen/tv_order_size"
                android:layout_marginBottom="@dimen/vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesan"
                android:textSize="@dimen/tv_order_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/linear_width_weight"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_alamat"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_pesanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pesanan"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>





    <Button
        android:id="@+id/tn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/tn_order"
        android:textColor="@color/colorPutih"
        android:background="@color/colorAccent"
        android:textSize="@dimen/tv_order_size"
        android:layout_marginTop="@dimen/vertical_margin"/>


</LinearLayout>